--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "three": "^0.133.1",
     "three-orbit-controls": "^82.1.0"
   },
