Updated to react 18 and added email contact.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,12 @@
                 "varsIgnorePattern": "^_"
             }
         ],
+        "react/no-unknown-property": [
+            2,
+            {
+              "ignore": ["jsx", "global"]
+            }
+          ],
         "react/display-name": 0
     }
 }
