--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oven-homepage",
+  "name": "lucas-homepage",
   "version": "1.0.0",
   "directories": {
     "lib": "lib"
@@ -11,24 +11,26 @@
     "lint": "next lint"
   },
   "keywords": [],
-  "author": "oven",
+  "author": "Lucas",
   "license": "MIT",
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.16",
-    "@chakra-ui/react": "^1.6.10",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@sendgrid/mail": "^7.6.0",
+    "@chakra-ui/color-mode": "^2.2.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@sendgrid/mail": "^7.7.0",
     "chakra": "^0.0.3",
     "emotion": "^11.0.0",
-    "framer-motion": "^4.1.17",
-    "next": "^11.1.2",
-    "node-mailjet": "^3.0.5",
-    "npm": "^8.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "three": "^0.133.1",
+    "framer-motion": "^10.16.4",
+    "next": "^13.5.6",
+    "node-mailjet": "^6.0.4",
+    "npm": "^10.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "sharp": "^0.32.6",
+    "three": "^0.157.0",
     "three-orbit-controls": "^82.1.0"
   },
   "devDependencies": {
